post endpoint for vm interface + provider implementation
